@@ -17,17 +17,17 @@
 package org.apache.kafka.tools.consumer.group;
 
 import org.apache.kafka.clients.CommonClientConfigs;
-import org.apache.kafka.clients.admin.AbstractOptions;
 import org.apache.kafka.clients.admin.Admin;
 import org.apache.kafka.clients.admin.DescribeShareGroupsResult;
+import org.apache.kafka.clients.admin.GroupListing;
+import org.apache.kafka.clients.admin.ListGroupsOptions;
+import org.apache.kafka.clients.admin.ListGroupsResult;
 import org.apache.kafka.clients.admin.ListOffsetsResult;
-import org.apache.kafka.clients.admin.ListShareGroupsOptions;
-import org.apache.kafka.clients.admin.ListShareGroupsResult;
-import org.apache.kafka.clients.admin.MemberDescription;
 import org.apache.kafka.clients.admin.OffsetSpec;
 import org.apache.kafka.clients.admin.ShareGroupDescription;
-import org.apache.kafka.clients.admin.ShareGroupListing;
-import org.apache.kafka.common.ShareGroupState;
+import org.apache.kafka.clients.admin.ShareMemberDescription;
+import org.apache.kafka.common.GroupState;
+import org.apache.kafka.common.GroupType;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.utils.Utils;
 import org.apache.kafka.server.util.CommandLineUtils;
@@ -36,7 +36,6 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -70,7 +69,7 @@ public class ShareGroupCommand {
     }
 
     public static void run(ShareGroupCommandOptions opts) {
-        try (ShareGroupService shareGroupService = new ShareGroupService(opts, Collections.emptyMap())) {
+        try (ShareGroupService shareGroupService = new ShareGroupService(opts, Map.of())) {
             if (opts.options.has(opts.listOpt)) {
                 shareGroupService.listGroups();
             } else if (opts.options.has(opts.describeOpt)) {
@@ -89,14 +88,13 @@ public class ShareGroupCommand {
         }
     }
 
-    static Set<ShareGroupState> shareGroupStatesFromString(String input) {
-        Set<ShareGroupState> parsedStates =
-            Arrays.stream(input.split(",")).map(s -> ShareGroupState.parse(s.trim())).collect(Collectors.toSet());
-        if (parsedStates.contains(ShareGroupState.UNKNOWN)) {
-            Collection<ShareGroupState> validStates =
-                Arrays.stream(ShareGroupState.values()).filter(s -> s != ShareGroupState.UNKNOWN).collect(Collectors.toList());
+    static Set<GroupState> groupStatesFromString(String input) {
+        Set<GroupState> parsedStates =
+            Arrays.stream(input.split(",")).map(s -> GroupState.parse(s.trim())).collect(Collectors.toSet());
+        Set<GroupState> validStates = GroupState.groupStatesForType(GroupType.SHARE);
+        if (!validStates.containsAll(parsedStates)) {
             throw new IllegalArgumentException("Invalid state list '" + input + "'. Valid states are: " +
-                validStates.stream().map(Object::toString).collect(Collectors.joining(", ")));
+                    validStates.stream().map(GroupState::toString).collect(Collectors.joining(", ")));
         }
         return parsedStates;
     }
@@ -128,10 +126,10 @@ public class ShareGroupCommand {
         public void listGroups() throws ExecutionException, InterruptedException {
             if (opts.options.has(opts.stateOpt)) {
                 String stateValue = opts.options.valueOf(opts.stateOpt);
-                Set<ShareGroupState> states = (stateValue == null || stateValue.isEmpty())
-                    ? Collections.emptySet()
-                    : shareGroupStatesFromString(stateValue);
-                List<ShareGroupListing> listings = listShareGroupsWithState(states);
+                Set<GroupState> states = (stateValue == null || stateValue.isEmpty())
+                    ? Set.of()
+                    : groupStatesFromString(stateValue);
+                List<GroupListing> listings = listShareGroupsInStates(states);
 
                 printGroupInfo(listings);
             } else
@@ -140,36 +138,54 @@ public class ShareGroupCommand {
 
         List<String> listShareGroups() {
             try {
-                ListShareGroupsResult result = adminClient.listShareGroups(withTimeoutMs(new ListShareGroupsOptions()));
-                Collection<ShareGroupListing> listings = result.all().get();
-                return listings.stream().map(ShareGroupListing::groupId).collect(Collectors.toList());
+                ListGroupsResult result = adminClient.listGroups(new ListGroupsOptions()
+                    .timeoutMs(opts.options.valueOf(opts.timeoutMsOpt).intValue())
+                    .withTypes(Set.of(GroupType.SHARE)));
+                Collection<GroupListing> listings = result.all().get();
+                return listings.stream().map(GroupListing::groupId).collect(Collectors.toList());
             } catch (InterruptedException | ExecutionException e) {
                 throw new RuntimeException(e);
             }
         }
 
-        List<ShareGroupListing> listShareGroupsWithState(Set<ShareGroupState> states) throws ExecutionException, InterruptedException {
-            ListShareGroupsOptions listShareGroupsOptions = withTimeoutMs(new ListShareGroupsOptions());
-            listShareGroupsOptions.inStates(states);
-            ListShareGroupsResult result = adminClient.listShareGroups(listShareGroupsOptions);
+        List<GroupListing> listShareGroupsInStates(Set<GroupState> states) throws ExecutionException, InterruptedException {
+            ListGroupsResult result = adminClient.listGroups(new ListGroupsOptions()
+                .timeoutMs(opts.options.valueOf(opts.timeoutMsOpt).intValue())
+                .withTypes(Set.of(GroupType.SHARE))
+                .inGroupStates(states));
             return new ArrayList<>(result.all().get());
         }
 
-        private void printGroupInfo(List<ShareGroupListing> groups) {
+        private void printGroupInfo(List<GroupListing> groups) {
             // find proper columns width
             int maxGroupLen = 15;
-            for (ShareGroupListing group : groups) {
+            for (GroupListing group : groups) {
                 maxGroupLen = Math.max(maxGroupLen, group.groupId().length());
             }
             System.out.printf("%" + (-maxGroupLen) + "s %s\n", "GROUP", "STATE");
-            for (ShareGroupListing group : groups) {
+            for (GroupListing group : groups) {
                 String groupId = group.groupId();
-                String state = group.state().orElse(ShareGroupState.UNKNOWN).toString();
+                String state = group.groupState().orElse(GroupState.UNKNOWN).toString();
                 System.out.printf("%" + (-maxGroupLen) + "s %s\n", groupId, state);
             }
         }
 
-        private void describeGroups() throws ExecutionException, InterruptedException {
+        /**
+         * Prints a summary of the state for situations where the group is empty or dead.
+         *
+         * @return Whether the group detail should be printed
+         */
+        public static boolean maybePrintEmptyGroupState(String group, GroupState state, int numRows) {
+            if (state == GroupState.DEAD) {
+                printError("Share group '" + group + "' does not exist.", Optional.empty());
+            } else if (state == GroupState.EMPTY) {
+                System.err.println("\nShare group '" + group + "' has no active members.");
+            }
+
+            return !state.equals(GroupState.DEAD) && numRows > 0;
+        }
+
+        public void describeGroups() throws ExecutionException, InterruptedException {
             String group = opts.options.valueOf(opts.groupOpt);
             ShareGroupDescription description = getDescribeGroup(group);
             if (description == null)
@@ -184,7 +200,7 @@ public class ShareGroupCommand {
         }
 
         ShareGroupDescription getDescribeGroup(String group) throws ExecutionException, InterruptedException {
-            DescribeShareGroupsResult result = adminClient.describeShareGroups(Collections.singletonList(group));
+            DescribeShareGroupsResult result = adminClient.describeShareGroups(List.of(group));
             Map<String, ShareGroupDescription> descriptionMap = result.all().get();
             if (descriptionMap.containsKey(group)) {
                 return descriptionMap.get(group);
@@ -192,9 +208,9 @@ public class ShareGroupCommand {
             return null;
         }
 
-        Map<TopicPartition, Long> getOffsets(Collection<MemberDescription> members) throws ExecutionException, InterruptedException {
+        Map<TopicPartition, Long> getOffsets(Collection<ShareMemberDescription> members) throws ExecutionException, InterruptedException {
             Set<TopicPartition> allTp = new HashSet<>();
-            for (MemberDescription memberDescription : members) {
+            for (ShareMemberDescription memberDescription : members) {
                 allTp.addAll(memberDescription.assignment().topicPartitions());
             }
             // fetch latest and earliest offsets
@@ -218,9 +234,9 @@ public class ShareGroupCommand {
 
         private void printOffsets(ShareGroupDescription description) throws ExecutionException, InterruptedException {
             Map<TopicPartition, Long> offsets = getOffsets(description.members());
-            if (offsets != null && !offsets.isEmpty()) {
+            if (maybePrintEmptyGroupState(description.groupId(), description.groupState(), offsets.size())) {
                 String fmt = printOffsetFormat(description, offsets);
-                System.out.printf(fmt, "GROUP", "TOPIC", "PARTITION", "OFFSET");
+                System.out.printf(fmt, "GROUP", "TOPIC", "PARTITION", "START-OFFSET");
 
                 for (Map.Entry<TopicPartition, Long> offset : offsets.entrySet()) {
                     System.out.printf(fmt, description.groupId(), offset.getKey().topic(), offset.getKey().partition(), offset.getValue());
@@ -238,30 +254,34 @@ public class ShareGroupCommand {
         }
 
         private void printStates(ShareGroupDescription description) {
+            maybePrintEmptyGroupState(description.groupId(), description.groupState(), 1);
+
             int groupLen = Math.max(15, description.groupId().length());
             String coordinator = description.coordinator().host() + ":" + description.coordinator().port() + "  (" + description.coordinator().idString() + ")";
             int coordinatorLen = Math.max(25, coordinator.length());
 
             String fmt = "%" + -groupLen + "s %" + -coordinatorLen + "s %-15s %s\n";
             System.out.printf(fmt, "GROUP", "COORDINATOR (ID)", "STATE", "#MEMBERS");
-            System.out.printf(fmt, description.groupId(), coordinator, description.state().toString(), description.members().size());
+            System.out.printf(fmt, description.groupId(), coordinator, description.groupState().toString(), description.members().size());
         }
 
         private void printMembers(ShareGroupDescription description) {
             int groupLen = Math.max(15, description.groupId().length());
             int maxConsumerIdLen = 15, maxHostLen = 15, maxClientIdLen = 15;
-            Collection<MemberDescription> members = description.members();
-            for (MemberDescription member : members) {
-                maxConsumerIdLen = Math.max(maxConsumerIdLen, member.consumerId().length());
-                maxHostLen = Math.max(maxHostLen, member.host().length());
-                maxClientIdLen = Math.max(maxClientIdLen, member.clientId().length());
-            }
+            Collection<ShareMemberDescription> members = description.members();
+            if (maybePrintEmptyGroupState(description.groupId(), description.groupState(), description.members().size())) {
+                for (ShareMemberDescription member : members) {
+                    maxConsumerIdLen = Math.max(maxConsumerIdLen, member.consumerId().length());
+                    maxHostLen = Math.max(maxHostLen, member.host().length());
+                    maxClientIdLen = Math.max(maxClientIdLen, member.clientId().length());
+                }
 
-            String fmt = "%" + -groupLen + "s %" + -maxConsumerIdLen + "s %" + -maxHostLen + "s %" + -maxClientIdLen + "s %s\n";
-            System.out.printf(fmt, "GROUP", "CONSUMER-ID", "HOST", "CLIENT-ID", "ASSIGNMENT");
-            for (MemberDescription member : members) {
-                System.out.printf(fmt, description.groupId(), member.consumerId(), member.host(), member.clientId(),
-                    member.assignment().topicPartitions().stream().map(part -> part.topic() + ":" + part.partition()).collect(Collectors.joining(",")));
+                String fmt = "%" + -groupLen + "s %" + -maxConsumerIdLen + "s %" + -maxHostLen + "s %" + -maxClientIdLen + "s %s\n";
+                System.out.printf(fmt, "GROUP", "CONSUMER-ID", "HOST", "CLIENT-ID", "ASSIGNMENT");
+                for (ShareMemberDescription member : members) {
+                    System.out.printf(fmt, description.groupId(), member.consumerId(), member.host(), member.clientId(),
+                        member.assignment().topicPartitions().stream().map(part -> part.topic() + ":" + part.partition()).collect(Collectors.joining(",")));
+                }
             }
         }
 
@@ -274,11 +294,6 @@ public class ShareGroupCommand {
             props.put(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, opts.options.valueOf(opts.bootstrapServerOpt));
             props.putAll(configOverrides);
             return Admin.create(props);
-        }
-
-        private <T extends AbstractOptions<T>> T withTimeoutMs(T options) {
-            int t = opts.options.valueOf(opts.timeoutMsOpt).intValue();
-            return options.timeoutMs(t);
         }
     }
 }
